Fix - Sidebar mobile view close button spacing

--- a/assets/stylesheet/scss/responsive/_responsive.scss
+++ b/assets/stylesheet/scss/responsive/_responsive.scss
@@ -15,6 +15,10 @@
   .interior-sidebar {
     display: none;
 
+    .container {
+      margin: 0 !important;
+    }
+
     &.open {
       display: block;
     }
